# fut-card-generator

./: .env  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  README.md  SECURITY.md  version.cmake
.github/ISSUE_TEMPLATE/: bug-report.md
.github/workflows/: publish.yml
api/: app.py
api/helpers/: args.py  path.py
api/models/: config.py
api/routes/: generate.py  index.py
assets/i18n/: de.json  en.json  es.json  fr.json  it.json  pt.json
assets/nations/: countries.json
docker/: Dockerfile  Dockerfile.api  Dockerfile.dev
include/: card.h  card_dimentions.h  card_dimentions_19_standard.h  card_dimentions_19_ucl.h  card_kind.h  card_template.h  card_type.h  dimention.h  dimention_19_standard.h  dimention_19_ucl.h  dimentions.h  dimentions_19_standard.h  dimentions_19_ucl.h  player.h  position.h  stats.h
include/card/: card.h  card.hpp  card_edition.h  card_template.h  card_type.h  card_type.hpp  edition.hpp  language.h  language.hpp  template.hpp  type.hpp
include/card/dimentions/: dimentions.hpp
include/card/template/: template.hpp  template_code.hpp  template_name.hpp
include/cli/: cli.hpp  params.hpp
include/core/: assets.hpp  draw.hpp  generator.hpp  ink.hpp  templator.hpp
include/core/draw/: draw.hpp
include/core/i18n/: dictionary.hpp  language.hpp  translator.hpp
include/exceptions/: failedDraw.hpp  failedFontLoad.hpp  failedImageDownload.hpp  failedImageLoad.hpp  failedImageSave.hpp  invalidCountryCode.hpp  invalidEditionCode.hpp  invalidImage.hpp  invalidImageRegion.hpp  invalidLanguageCode.hpp  invalidTemplateCode.hpp
include/generator/: generator.h  generator.hpp
include/player/: country.hpp  player.h  player.hpp  position.hpp  stats.h  stats.hpp
include/template/: template.hpp  template_code.hpp
include/template/color/: color.hpp  colors.hpp
include/template/dimentions/: dimentions.hpp
include/template/font/: font.hpp  font_buffer.hpp  font_buffers.hpp  font_code.hpp  font_target.hpp  font_type.hpp  fonts.hpp
scripts/: api.sh  build.sh  clean.sh  dev.sh  entrypoint.sh  install.sh  run.sh  start.sh
src/: card.cpp  card_dimentions.cpp  card_dimentions_19_standard.cpp  card_dimentions_19_ucl.cpp  card_kind.cpp  card_template.cpp  card_type.cpp  cardtype.cpp  dimention_19_standard.cpp  dimention_19_ucl.cpp  dimentions_19_standard.cpp  dimentions_19_ucl.cpp  language.cpp  main.cpp  player.cpp
src/card/: card.cpp  card_type.cpp  edition.cpp  language.cpp  template.cpp  type.cpp
src/card/dimentions/: dimentions.cpp
src/card/template/: template.cpp  template_code.cpp  template_name.cpp
src/cli/: cli.cpp  params.cpp
src/core/: assets.cpp  draw.cpp  generator.cpp  ink.cpp  templator.cpp
src/core/draw/: draw.cpp
src/core/i18n/: language.cpp  translator.cpp
src/exceptions/: failedDraw.cpp  failedFontLoad.cpp  failedImageDownload.cpp  failedImageLoad.cpp  failedImageSave.cpp  invalidCountryCode.cpp  invalidEditionCode.cpp  invalidImage.cpp  invalidImageRegion.cpp  invalidLanguageCode.cpp  invalidTemplateCode.cpp
src/generator/: generator.cpp
src/player/: country.cpp  player.cpp  position.cpp  stats.cpp
src/template/: template.cpp  template_code.cpp
src/template/color/: color.cpp
src/template/dimentions/: dimentions.cpp
(+28 files in other folders)
